--- a/aboutus.html
+++ b/aboutus.html
@@ -46,12 +46,38 @@
     </div>
   </nav>
   <!--End of Navbar-->
-
+  <!--Hero start-->
+  <div class="abouthead" style="background-image: url(./img/Jajanan/Bika\ Ambon.png);">
+    <div class="abouthead-overlay d-inline-flex p-2 align-items-center">
+      <div class="container w-75 text-center ">
+        <h1 class="text-center">Tentang</h1>
+      </div>
+    </div>
+  </div>
+  <!--End of Hero-->
+  <div class="container moreabout my-4">
+    <div class="row">
+      <div class="col">
+        <img
+          src="https://images.unsplash.com/photo-1490578474895-699cd4e2cf59?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1471&q=80"
+          class="img-fluid d-block">
+      </div>
+      <div class="col">
+        <h4 class="heading text-center">Awal Mula</h4>
+        <p class="lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse odit veritatis suscipit
+          ducimus corporis
+          deserunt
+          fugiat vel repellat, delectus recusandae, id, itaque beatae animi architecto. Quis perferendis ab repellendus
+          dicta lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, dolor, vero dolores nobis saepe eos
+          molestias </p>
+      </div>
+    </div>
+  </div>
   <!--Footer-->
   <footer class="footer pt-3">
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col-5">
           <h4>Warung Hati</h4>
         </div>
         <div class="col text-end">
@@ -68,7 +94,7 @@
             <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
           </a>
         </div>
-        <hr class="mt-1"/>
+        <hr class="mt-1" />
         <div class="text-center">
           <p>@copyright by Warung Hati.</p>
         </div>
