--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </nav>
 
   <!--End of Navbar-->
-  <!--Slideshow start-->
+  <!--Hero start-->
   <div class="homehead" style="background-image: url(./img/Front_Page/BuburMadura.png);">
     <div class="homehead-overlay d-inline-flex p-2 align-items-center">
       <div class="container w-75 text-center animate__animated animate__fadeInDown">
@@ -58,14 +58,14 @@
       </div>
     </div>
   </div>
-  <!--End of Slideshow-->
+  <!--End of Hero-->
 
   <!--Quick About us-->
   <div class="container my-5 animate__animated animate__fadeInLeft">
-    <div class="row">
+    <div class="row ">
       <div class="col-md-6 g-0 text-center">
         <img src="img/Menu_Utama/Gado-Gado 3.png" style="object-position: 65%;" class="img-rest">
-        <img src="img/5. Ala Carte/Sayur/Ayam Goreng.png" class="img-rest" style="margin-top: 50px;">
+        <img src="img/5. Ala Carte/Sayur/Sayur Asem.png" class="img-rest" style="margin-top: 50px;">
       </div>
       <div class="col-md-6">
         <div class="container start-50 mt-5 mt-md-0">
@@ -152,7 +152,7 @@
   </div>
   <!--End of Best Pick-->
   <!--Contact-->
-  <div class="container my-4">
+  <div class="container my-4 contact">
     <h1 class="heading text-center fw-bold">Chat dengan kita</h1>
     <h5 class="display-6 text-center fw-lighter">Untuk reservasi sama informasi tambahan</h5>
     <div class="container mt-2 text-center">
