--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
         aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-  
+
       <div class="collapse navbar-collapse" id="navbarsExample02">
         <ul class="navbar-nav ml-auto ms-3">
           <li class="nav-item">
@@ -86,293 +86,37 @@
     <div class="tab-content mb-5 mt-3">
       <div class="tab-pane active show" id="primary">
         <div class="container">
-          <div class="row">
-            <div class="col-sm-6 col-md-6 col-lg-6">
-              <div class="food-card food-card--vertical">
-                <div class="food-card_img">
-                  <img src="img/Menu_Utama/Gado-Gado 3.png" alt="">
-                </div>
-                <div class="food-card_content">
-                  <div class="food-card_title-section">
-                    <h3 class="food-card_title">Gado-Gado</h3>
-                    <figcaption class="blockquote-footer mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Molestias.</figcaption>
-                  </div>
-                  <div class="food-card_bottom-section">
-                    <hr>
-                    <div class="space-between">
-                      <div class="food-card_price">
-                        <span>5.99$</span>
-                      </div>
-                    </div>
-                  </div>
+          <div class="row gy-3">
+            <div class="col-md-6 col-sm-1">
+              <div class="card food-card">
+                <img src="img/Menu_Utama/Asinan Betawi.png" class="card-img-top" style="object-position: 50% 75%;">
+                <div class="card-body">
+                  <h2 class="card-title">Asinan Betawi</h2>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, id possimus?
+                    Qui, quos!.</p>
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="food-card food-card--vertical">
-              <div class="food-card_img">
-                <img src="img/Menu_Utama/Asinan Betawi.png" alt="">
-              </div>
-              <div class="food-card_content">
-                <div class="food-card_title-section">
-                  <h3 class="food-card_title">Asinan Betawi</h3>
-                  <figcaption class="blockquote-footer mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Molestias.</figcaption>
-                </div>
-                <div class="food-card_bottom-section">
-                  <hr>
-                  <div class="space-between">
-                    <div class="food-card_price">
-                      <span>5.99$</span>
-                    </div>
-                  </div>
+            <div class="col-md-6 col-sm-1">
+              <div class="card food-card">
+                <img src="img/Menu_Utama/Asinan Betawi.png" class="card-img-top" style="object-position: 50% 75%;">
+                <div class="card-body">
+                  <h2 class="card-title">Asinan Betawi</h2>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, id possimus?
+                    Qui, quos!.</p>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="food-card food-card--vertical">
-              <div class="food-card_img">
-                <img src="img/Menu_Utama/Kupat Tahu Magelang 1.png" alt="">
-              </div>
-              <div class="food-card_content">
-                <div class="food-card_title-section">
-                  <h3 class="food-card_title">Kupat Tahu Magelang</h3>
-                  <figcaption class="blockquote-footer mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Molestias.</figcaption>
-                </div>
-                <div class="food-card_bottom-section">
-                  <hr>
-                  <div class="space-between">
-                    <div class="food-card_price">
-                      <span>5.99$</span>
-                    </div>
-                  </div>
+            <div class="col-md-6 col-sm-1">
+              <div class="card food-card">
+                <img src="img/Menu_Utama/Asinan Betawi.png" class="card-img-top" style="object-position: 50% 75%;">
+                <div class="card-body">
+                  <h2 class="card-title">Asinan Betawi</h2>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, id possimus?
+                    Qui, quos!.</p>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="food-card food-card--vertical">
-              <div class="food-card_img">
-                <img src="img/Menu_Utama/Laksa Medan.png" alt="">
-              </div>
-              <div class="food-card_content">
-                <div class="food-card_title-section">
-                  <h3 class="food-card_title">Laksa Medan</h3>
-                  <figcaption class="blockquote-footer mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Molestias.</figcaption>
-                </div>
-                <div class="food-card_bottom-section">
-                  <hr>
-                  <div class="space-between">
-                    <div class="food-card_price">
-                      <span>5.99$</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="food-card food-card--vertical">
-              <div class="food-card_img">
-                <img src="img/Menu_Utama/Mie Kocok Bandung.png" alt="">
-              </div>
-              <div class="food-card_content">
-                <div class="food-card_title-section">
-                  <h3 class="food-card_title">Mie Kocok Bandung</h3>
-                  <figcaption class="blockquote-footer mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Molestias.</figcaption>
-                </div>
-                <div class="food-card_bottom-section">
-                  <hr>
-                  <div class="space-between">
-                    <div class="food-card_price">
-                      <span>5.99$</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="food-card food-card--vertical">
-              <div class="food-card_img">
-                <img src="img/Menu_Utama/Nasi Betutu.png" alt="">
-              </div>
-              <div class="food-card_content">
-                <div class="food-card_title-section">
-                  <h3 class="food-card_title">Nasi Betutu</h3>
-                  <figcaption class="blockquote-footer mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Molestias.</figcaption>
-                </div>
-                <div class="food-card_bottom-section">
-                  <hr>
-                  <div class="space-between">
-                    <div class="food-card_price">
-                      <span>5.99$</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="food-card food-card--vertical">
-              <div class="food-card_img">
-                <img src="img/Menu_Utama/Nasi Gudeg Jogja.png" alt="">
-              </div>
-              <div class="food-card_content">
-                <div class="food-card_title-section">
-                  <h3 class="food-card_title">Nasi Gudeg</h3>
-                  <figcaption class="blockquote-footer mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Molestias.</figcaption>
-                </div>
-                <div class="food-card_bottom-section">
-                  <hr>
-                  <div class="space-between">
-                    <div class="food-card_price">
-                      <span>5.99$</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="food-card food-card--vertical">
-              <div class="food-card_img">
-                <img src="img/Menu_Utama/Nasi Liwet.png" alt="">
-              </div>
-              <div class="food-card_content">
-                <div class="food-card_title-section">
-                  <h3 class="food-card_title">Nasi Liwet</h3>
-                  <figcaption class="blockquote-footer mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Molestias.</figcaption>
-                </div>
-                <div class="food-card_bottom-section">
-                  <hr>
-                  <div class="space-between">
-                    <div class="food-card_price">
-                      <span>5.99$</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="food-card food-card--vertical">
-              <div class="food-card_img">
-                <img src="img/Menu_Utama/Nasi Pecel 2.png" alt="">
-              </div>
-              <div class="food-card_content">
-                <div class="food-card_title-section">
-                  <h3 class="food-card_title">Nasi Pecel</h3>
-                  <figcaption class="blockquote-footer mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Molestias.</figcaption>
-                </div>
-                <div class="food-card_bottom-section">
-                  <hr>
-                  <div class="space-between">
-                    <div class="food-card_price">
-                      <span>5.99$</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="food-card food-card--vertical">
-              <div class="food-card_img">
-                <img src="img/Menu_Utama/Nasi Tutug Oncom.png" alt="">
-              </div>
-              <div class="food-card_content">
-                <div class="food-card_title-section">
-                  <h3 class="food-card_title">Nasi Tutug Oncom</h3>
-                  <figcaption class="blockquote-footer mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Molestias.</figcaption>
-                </div>
-                <div class="food-card_bottom-section">
-                  <hr>
-                  <div class="space-between">
-                    <div class="food-card_price">
-                      <span>5.99$</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="food-card food-card--vertical">
-              <div class="food-card_img">
-                <img src="img/Menu_Utama/Nasi Uduk.png" alt="">
-              </div>
-              <div class="food-card_content">
-                <div class="food-card_title-section">
-                  <h3 class="food-card_title">Nasi Uduk</h3>
-                  <figcaption class="blockquote-footer mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Molestias.</figcaption>
-                </div>
-                <div class="food-card_bottom-section">
-                  <hr>
-                  <div class="space-between">
-                    <div class="food-card_price">
-                      <span>5.99$</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="food-card food-card--vertical">
-              <div class="food-card_img">
-                <img src="img/Menu_Utama/Soto Ayam.png" alt="">
-              </div>
-              <div class="food-card_content">
-                <div class="food-card_title-section">
-                  <h3 class="food-card_title">Soto Ayam</h3>
-                  <figcaption class="blockquote-footer mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Molestias.</figcaption>
-                </div>
-                <div class="food-card_bottom-section">
-                  <hr>
-                  <div class="space-between">
-                    <div class="food-card_price">
-                      <span>5.99$</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="food-card food-card--vertical">
-              <div class="food-card_img">
-                <img src="img/Menu_Utama/Soto Betawi 2.png" alt="">
-              </div>
-              <div class="food-card_content">
-                <div class="food-card_title-section">
-                  <h3 class="food-card_title">Soto Betawi</h3>
-                  <figcaption class="blockquote-footer mt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Molestias.</figcaption>
-                </div>
-                <div class="food-card_bottom-section">
-                  <hr>
-                  <div class="space-between">
-                    <div class="food-card_price">
-                      <span>5.99$</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
           </div>
         </div>
       </div>
@@ -1574,12 +1318,13 @@
       </div>
     </div>
   </div>
+
   <!--End of tabs category-->
   <!--Footer-->
   <footer class="footer pt-3">
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col-5">
           <h4>Warung Hati</h4>
         </div>
         <div class="col text-end">
