Create Meal Plans

--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
       </div>
     </div>
   </nav>
-
   <!--End of Navbar-->
   <!--Hero start-->
   <div class="homehead" style="background-image: url(./img/Front_Page/BuburMadura.png);">
     <div class="homehead-overlay d-inline-flex p-2 align-items-center">
       <div class="container w-75 text-center animate__animated animate__fadeInDown">
         <h1 class="text-center">Warung Hati</h1>
-        <h5 class="text-center">"Lorem ipsum dolor sit amet consectetur adipisicing elit"</h5>
+        <h5 class="text-center">"the Authentic Indonesia’s Heritage Cuisine with Organic and Natural Ingredients"</h5>
       </div>
     </div>
   </div>
@@ -69,7 +68,7 @@
       </div>
       <div class="col-md-6">
         <div class="container start-50 mt-5 mt-md-0">
-          <h1 class="heading">Selamat Datang</h1>
+          <h1 class="heading">Welcome</h1>
           <p class="capt w-75"> Restaurant is a place for simplicity. Good food,
             good beer,
             and good service. Simple is the
@@ -84,9 +83,7 @@
 
   <!--Best Pick-->
   <div class="my-4">
-    <div class="my-3">
-      <h1 class="heading text-center">Menu Andalan</h1>
-    </div>
+    <h3 class="heading text-center mb-4" style="font-size: 85px;">Who says healthy food couldn’t be tasty?</h3>
     <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true"
@@ -153,8 +150,8 @@
   <!--End of Best Pick-->
   <!--Contact-->
   <div class="container my-4 contact">
-    <h1 class="heading text-center fw-bold">Chat dengan kita</h1>
-    <h5 class="display-6 text-center fw-lighter">Untuk reservasi sama informasi tambahan</h5>
+    <h1 class="heading text-center fw-bold"> Contact Us</h1>
+    <h5 class="display-6 text-center fw-lighter">For reservasion and information</h5>
     <div class="container mt-2 text-center">
       <div class="row mt-3 mb-5">
         <div class="col-md-4 mt-md-0 mt-sm-3">
