Modify Meal Plans

--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@
 
 <body>
   <!--Navigation Bar Start-->
-  <nav class="navbar navbar-expand navbar-scrolled" aria-label="Second navbar example">
+  <nav class="navbar navbar-expand-md navbar-scrolled" aria-label="Second navbar example">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <h3>Warung Hati</h3>
@@ -29,14 +29,16 @@
         aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
-      <div class="collapse navbar-collapse" id="navbarsExample02">
-        <ul class="navbar-nav ml-auto ms-3">
+      <div class="collapse navbar-collapse justify-content-center" id="navbarsExample02">
+        <ul class="navbar-nav me-auto ms-1">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="menu.html">Menu</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="mealplans.html">Meal Plans</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="aboutus.html">About Us</a>
