--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <title>Home</title>
 </head>
-<style>
-</style>
 
 <body>
   <!--Navigation Bar Start-->
@@ -41,6 +39,9 @@
             <a class="nav-link" href="menu.html">Menu</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="mealplans.html">Meal Plans</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="aboutus.html">About Us</a>
           </li>
         </ul>
@@ -49,11 +50,11 @@
   </nav>
   <!--End of Navbar-->
   <!--Hero start-->
-  <div class="homehead" style="background-image: url(./img/Front_Page/BuburMadura.png);">
+  <div class="homehead" style="background-image: url(./img/Front_Page/NasiCampurBali.png);">
     <div class="homehead-overlay d-inline-flex p-2 align-items-center">
       <div class="container w-75 text-center animate__animated animate__fadeInDown">
         <h1 class="text-center">Warung Hati</h1>
-        <h5 class="text-center">"the Authentic Indonesia’s Heritage Cuisine with Organic and Natural Ingredients"</h5>
+        <h5 class="text-center">The Authentic Indonesia’s Heritage Cuisine with Organic and Natural Ingredients</h5>
       </div>
     </div>
   </div>
@@ -90,13 +91,14 @@
           aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active c-item">
-          <img src="img/Menu_Utama/Gado-Gado 3.png" class="d-block w-100 c-img" alt="Slide 1">
+          <img src="img/Menu_Utama/Nasi Gudeg Jogja.png" class="d-block w-100 c-img" alt="Slide 1">
           <div class="carousel-caption top-50 translate-middle-y text-start">
             <div class="animate__animated animate__fadeInLeft">
-              <h1 class="display-1 fw-bolder text-capitalize">Gado-Gado</h1>
+              <h1 class="display-1 fw-bolder text-capitalize">Gudeg Jogja</h1>
               <hr class="w-50">
               <p class="fs-5 w-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut aperiam saepe
                 veritatis
@@ -122,11 +124,26 @@
           </div>
         </div>
         <div class="carousel-item c-item">
-          <img src="img/Menu_Utama/Mie Kocok Bandung.png" class="d-block w-100 c-img"
+          <img src="img/Jajanan/Jajan Pasar 5.png" class="d-block w-100 c-img"
             style="object-position: 50% 90% !important;" alt="Slide 3">
           <div class="carousel-caption top-50 translate-middle-y text-start">
             <div class="animate__animated animate__fadeInLeft">
-              <h1 class="display-1 fw-bolder text-capitalize">Mie Kocok Bandung</h1>
+              <h1 class="display-1 fw-bolder text-capitalize">Jajanan Pasar</h1>
+              <hr class="w-50">
+              <p class="fs-5 w-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut aperiam saepe
+                veritatis
+                eius deleniti dolor illum ullam earum, harum perferendis nam nostrum culpa consectetur sit officia
+                commodi
+                ducimus. Qui?</p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item c-item">
+          <img src="img/Minuman/Es Cendol.png" class="d-block w-100 c-img"
+            style="object-position: 50% 90% !important;" alt="Slide 3">
+          <div class="carousel-caption top-50 translate-middle-y text-start">
+            <div class="animate__animated animate__fadeInLeft">
+              <h1 class="display-1 fw-bolder text-capitalize">Es Cendol</h1>
               <hr class="w-50">
               <p class="fs-5 w-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut aperiam saepe
                 veritatis
