--- a/mealplans.html
+++ b/mealplans.html
@@ -64,22 +64,23 @@
     </div>
     <!-- Header end -->
     <!-- Content -->
-    <div class="container my-4">
-        <div class="card mb-3 ">
-            <div class="row gy-4">
-                <div class="col-md-5">
-                    <img src="img/Menu_Utama/Nasi Pecel 2.png" class="img-plans align-content-center rounded-start">
-                </div>
-                <div class="col-md-7">
-                    <div class="card-body ">
-                        <h1 class="heading">Sapu Jagad</h1>
-                        <h5 class="card-text mt-4 text-body-tertiary">Selection of healthy meals to support the immune
+    <div class="container mt-4">
+        <div class="container">
+            <div class="card">
+                <div class="position-relative">
+                    <img class="card-img-top img-plans2" src="img/Menu_Utama/Nasi Pecel 2.png" alt="Image">
+                    <div class="card-body position-absolute top-50 end-0 translate-middle-y plans-block-text-right">
+                        <h1 class="heading text-white">Sapu Jagad</h1>
+                        <h5 class="card-text mt-4 text-white">Selection of healthy meals to support the immune
                             system and improve
                             stamina
                         </h5>
-                        <h5 class=""><span class="fs-3 heading" style="color: #406343;">Goal </span>: Immune booster,
+                        <h5 class="text-white"><span class="fs-3 heading" style="color: #406343;">Goal </span>: Immune
+                            booster,
                             increase energy and stamina</h5>
-                        <h5><span class="fs-3 heading">Menu </span>: Nasi Pecel Kacang Mente with Organic Tempeh Bacem</h5>
+                        <h5 class="text-white"><span class="fs-3 heading">Menu </span>: Nasi Pecel Kacang Mente with
+                            Organic Tempeh Bacem
+                        </h5>
                         <ul class="list-group">
                             <li class="list-group-item">6 days package</li>
                             <li class="list-group-item">2 healthy main course</li>
@@ -90,16 +91,27 @@
                 </div>
             </div>
         </div>
-        <div class="container my-4">
-            <div class="card text-white overlay-card">
-                <img src="img/Jajanan/Asinan Bogor (2).png" class="card-img img-plans2" alt="...">
-                <div class="card-img-overlay container">
-                    <div class="container position-absolute top-50 start-100 translate-middle">
-                        <h1 class="heading">Sapu Jagad</h1>
-                        <h5 class="card-text mt-4 w-50">Selection of healthy meals to support the immune
+        <div class="container mt-3">
+            <div class="card">
+                <div class="position-relative">
+                    <img class="card-img-top img-plans2" src="img/Front_Page/EsKuwutBali.png" alt="Image">
+                    <div class="card-body position-absolute top-50 start-0 translate-middle-y plans-block-text-left">
+                        <h1 class="heading text-white">Sapu Jagad</h1>
+                        <h5 class="card-text mt-4 text-white">Selection of healthy meals to support the immune
                             system and improve
                             stamina
                         </h5>
+                        <h5 class="text-white"><span class="fs-3 heading" style="color: #406343;">Goal </span>: Immune
+                            booster,
+                            increase energy and stamina</h5>
+                        <h5><span class="fs-3 heading">Menu </span>: Nasi Pecel Kacang Mente with Organic Tempeh Bacem
+                        </h5>
+                        <ul class="list-group">
+                            <li class="list-group-item">6 days package</li>
+                            <li class="list-group-item">2 healthy main course</li>
+                            <li class="list-group-item">1 healthy beverage (cold-pressed juice or smoothies)</li>
+                            <li class="list-group-item">1.500 calories/day</li>
+                        </ul>
                     </div>
                 </div>
             </div>
