--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@
 
 <body>
   <!--Navigation Bar Start-->
-  <nav class="navbar navbar-expand-md navbar-scrolled" aria-label="Second navbar example">
+  <nav class="navbar navbar-expand-md fixed-top navbar-scrolled" aria-label="Second navbar example">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <h3>Warung Hati</h3>
