--- a/index.html
+++ b/index.html
@@ -62,20 +62,18 @@
 
   <!--Quick About us-->
   <div class="container my-5 animate__animated animate__fadeInLeft">
-    <div class="row ">
+    <div class="row">
       <div class="col-md-6 g-0 text-center">
         <img src="img/Menu_Utama/Gado-Gado 3.png" style="object-position: 65%;" class="img-rest">
         <img src="img/5. Ala Carte/Sayur/Sayur Asem.png" class="img-rest" style="margin-top: 50px;">
       </div>
       <div class="col-md-6">
         <div class="container start-50 mt-5 mt-md-0">
-          <h1 class="heading">Welcome</h1>
-          <p class="capt w-75"> Restaurant is a place for simplicity. Good food,
-            good beer,
-            and good service. Simple is the
-            name of the game, and we’re good at finding it in all the right places, even in your dining experience.
-            We’re a small group from Denver, Colorado who make simple food possible. Come join us and see what
-            simplicity tastes like.</p>
+          <h1 class="heading">Welcome to your life-changing journey </h1>
+          <p class="capt w-75"> Experience the authentic taste of Indonesia's cultural heritage with Warung Hati's
+            cuisine. Our menu is crafted with indigenous herbs, spices, and natural ingredients that have been passed
+            down from our ancestors. We believe that this wisdom is the key to achieving the balance between humans and
+            nature, and is also the secret to prime health and longevity..</p>
         </div>
       </div>
     </div>
@@ -83,15 +81,13 @@
   <!--End Quick about us-->
 
   <!--Best Pick-->
-  <div class="my-4">
-    <h3 class="heading text-center mb-4" style="font-size: 85px;">Who says healthy food couldn’t be tasty?</h3>
+  <div class="my-5">
     <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true"
           aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active c-item">
@@ -100,56 +96,33 @@
             <div class="animate__animated animate__fadeInLeft">
               <h1 class="display-1 fw-bolder text-capitalize">Gudeg Jogja</h1>
               <hr class="w-50">
-              <p class="fs-5 w-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut aperiam saepe
-                veritatis
-                eius deleniti dolor illum ullam earum, harum perferendis nam nostrum culpa consectetur sit officia
-                commodi
-                ducimus. Qui?</p>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item c-item">
-          <img src="img/Jajanan/Batagor.png" class="d-block w-100 c-img" style="object-position: 50% 100% !important;"
-            alt="Slide 2">
-          <div class="carousel-caption top-50 translate-middle-y text-start">
-            <div class="animate__animated animate__fadeInLeft">
-              <h1 class="display-1 fw-bolder text-capitalize">Batagor</h1>
-              <hr class="w-50">
-              <p class="fs-5 w-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut aperiam saepe
-                veritatis
-                eius deleniti dolor illum ullam earum, harum perferendis nam nostrum culpa consectetur sit officia
-                commodi
-                ducimus. Qui?</p>
+              <p class="fs-5 w-50">A mix of steamed and raw vegetables, fried tofu, and boiled egg, with creamy
+                sweet-savory cashew dressing. Javanese Island's most popular salad! Every city in Java has its style of
+                this salad but with one similarity: delicious?</p>
             </div>
           </div>
         </div>
         <div class="carousel-item c-item">
           <img src="img/Jajanan/Jajan Pasar 5.png" class="d-block w-100 c-img"
-            style="object-position: 50% 90% !important;" alt="Slide 3">
+            style="object-position: 50% 90% !important;" alt="Slide 2">
           <div class="carousel-caption top-50 translate-middle-y text-start">
             <div class="animate__animated animate__fadeInLeft">
               <h1 class="display-1 fw-bolder text-capitalize">Jajanan Pasar</h1>
               <hr class="w-50">
-              <p class="fs-5 w-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut aperiam saepe
-                veritatis
-                eius deleniti dolor illum ullam earum, harum perferendis nam nostrum culpa consectetur sit officia
-                commodi
-                ducimus. Qui?</p>
+              <p class="fs-5 w-50">Delight in Jajan Pasar's treasures. Assorted traditional sweets showcase Indonesia's
+                culinary heritage, embodying flavors that enchant generations</p>
             </div>
           </div>
         </div>
         <div class="carousel-item c-item">
-          <img src="img/Minuman/Es Cendol.png" class="d-block w-100 c-img"
-            style="object-position: 50% 90% !important;" alt="Slide 3">
+          <img src="img/Minuman/Es Cendol.png" class="d-block w-100 c-img" style="object-position: 50% 90% !important;"
+            alt="Slide 3">
           <div class="carousel-caption top-50 translate-middle-y text-start">
             <div class="animate__animated animate__fadeInLeft">
               <h1 class="display-1 fw-bolder text-capitalize">Es Cendol</h1>
               <hr class="w-50">
-              <p class="fs-5 w-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut aperiam saepe
-                veritatis
-                eius deleniti dolor illum ullam earum, harum perferendis nam nostrum culpa consectetur sit officia
-                commodi
-                ducimus. Qui?</p>
+              <p class="fs-5 w-50">Layers of joy—pandan rice boba, coconut milk, and palm sugar syrup. An icy indulgence
+                that's sweet, creamy, and utterly refreshing.</p>
             </div>
           </div>
         </div>
@@ -166,9 +139,9 @@
   </div>
   <!--End of Best Pick-->
   <!--Contact-->
-  <div class="container my-4 contact">
+  <div class="container my-5 contact">
     <h1 class="heading text-center fw-bold"> Contact Us</h1>
-    <h5 class="display-6 text-center fw-lighter">For reservasion and information</h5>
+    <h5 class="display-6 text-center fw-lighter">For reservation and information</h5>
     <div class="container mt-2 text-center">
       <div class="row mt-3 mb-5">
         <div class="col-md-4 mt-md-0 mt-sm-3">
