--- a/mealplans.html
+++ b/mealplans.html
@@ -15,18 +15,11 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <style>
-        @media (max-width: 576px) {
-            .mobile-image-top .card-img-top {
-                order: -1;
-            }
-        }
-    </style>
 </head>
 
 <body>
     <!--Navigation Bar Start-->
-    <nav class="navbar navbar-expand-md navbar-scrolled" aria-label="Second navbar example">
+    <nav class="navbar navbar-expand-md fixed-top navbar-scrolled" aria-label="Second navbar example">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <h3>Warung Hati</h3>
@@ -65,10 +58,10 @@
     <!-- Header end -->
     <!-- Content -->
     <div class="container mt-4">
-        <div class="container">
+        <div class="container mt-3">
             <div class="card">
                 <div class="position-relative">
-                    <img class="card-img-top img-plans2" src="img/Menu_Utama/Nasi Pecel 2.png" alt="Image">
+                    <img class="card-img-top rounded img-plans" src="img/Front_Page/EsKuwutBali.png" alt="Image">
                     <div class="card-body position-absolute top-50 end-0 translate-middle-y plans-block-text-right">
                         <h1 class="heading text-white">Sapu Jagad</h1>
                         <h5 class="card-text mt-4 text-white">Selection of healthy meals to support the immune
@@ -78,8 +71,7 @@
                         <h5 class="text-white"><span class="fs-3 heading" style="color: #406343;">Goal </span>: Immune
                             booster,
                             increase energy and stamina</h5>
-                        <h5 class="text-white"><span class="fs-3 heading">Menu </span>: Nasi Pecel Kacang Mente with
-                            Organic Tempeh Bacem
+                        <h5><span class="fs-3 heading">Menu </span>: Nasi Pecel Kacang Mente with Organic Tempeh Bacem
                         </h5>
                         <ul class="list-group">
                             <li class="list-group-item">6 days package</li>
@@ -91,10 +83,10 @@
                 </div>
             </div>
         </div>
-        <div class="container mt-3">
+        <div class="container my-3">
             <div class="card">
                 <div class="position-relative">
-                    <img class="card-img-top img-plans2" src="img/Front_Page/EsKuwutBali.png" alt="Image">
+                    <img class="card-img-top rounded img-plans" src="img/Front_Page/EsKuwutBali.png" alt="Image">
                     <div class="card-body position-absolute top-50 start-0 translate-middle-y plans-block-text-left">
                         <h1 class="heading text-white">Sapu Jagad</h1>
                         <h5 class="card-text mt-4 text-white">Selection of healthy meals to support the immune
