Update Meal plan

--- a/mealplans.html
+++ b/mealplans.html
@@ -61,24 +61,28 @@
         <div class="container mt-3">
             <div class="card">
                 <div class="position-relative">
-                    <img class="card-img-top rounded img-plans" src="img/Front_Page/EsKuwutBali.png" alt="Image">
-                    <div class="card-body position-absolute top-50 end-0 translate-middle-y plans-block-text-right">
-                        <h1 class="heading text-white">Sapu Jagad</h1>
-                        <h5 class="card-text mt-4 text-white">Selection of healthy meals to support the immune
+                    <div>
+                        <img class="card-img-top rounded img-plans" src="img/Menu_Utama/Nasi Pecel 2.png" alt="Image">
+                    </div>
+                    <div
+                        class="card-body position-absolute top-50 end-0 translate-middle-y text-white plans-block-text-right">
+                        <h1 class="heading">Sapu Jagad</h1>
+                        <h5 class="card-text">Selection of healthy meals to support the immune
                             system and improve
                             stamina
                         </h5>
-                        <h5 class="text-white"><span class="fs-3 heading" style="color: #406343;">Goal </span>: Immune
+                        <h5><span class="fs-3 heading">Goal </span>: Immune
                             booster,
                             increase energy and stamina</h5>
                         <h5><span class="fs-3 heading">Menu </span>: Nasi Pecel Kacang Mente with Organic Tempeh Bacem
                         </h5>
-                        <ul class="list-group">
+                        <ul class="list-group my-2">
                             <li class="list-group-item">6 days package</li>
                             <li class="list-group-item">2 healthy main course</li>
                             <li class="list-group-item">1 healthy beverage (cold-pressed juice or smoothies)</li>
                             <li class="list-group-item">1.500 calories/day</li>
                         </ul>
+                        <h1><span class="fs-1 heading">Price :</span> Rp600000</h1>
                     </div>
                 </div>
             </div>
@@ -87,23 +91,76 @@
             <div class="card">
                 <div class="position-relative">
                     <img class="card-img-top rounded img-plans" src="img/Front_Page/EsKuwutBali.png" alt="Image">
-                    <div class="card-body position-absolute top-50 start-0 translate-middle-y plans-block-text-left">
-                        <h1 class="heading text-white">Sapu Jagad</h1>
-                        <h5 class="card-text mt-4 text-white">Selection of healthy meals to support the immune
-                            system and improve
-                            stamina
+                    <div
+                        class="card-body position-absolute top-50 start-0 translate-middle-y text-white plans-block-text-left">
+                        <h1 class="heading">Seger Waras</h1>
+                        <h5 class="card-text">Specially designed for those who are on their healing journey from
+                            certain health conditions.
                         </h5>
-                        <h5 class="text-white"><span class="fs-3 heading" style="color: #406343;">Goal </span>: Immune
-                            booster,
-                            increase energy and stamina</h5>
-                        <h5><span class="fs-3 heading">Menu </span>: Nasi Pecel Kacang Mente with Organic Tempeh Bacem
+                        <h5><span class="fs-3 heading">Goal :</span> Detoxification, hormone balancing, and healing
                         </h5>
-                        <ul class="list-group">
+                        <h5><span class="fs-3 heading">Menu :</span> Ketoprak bumbu mente with steamed organic tofu,
+                            tempeh, and boiled egg
+                        </h5>
+                        <ul class="list-group my-2 ">
                             <li class="list-group-item">6 days package</li>
                             <li class="list-group-item">2 healthy main course</li>
                             <li class="list-group-item">1 healthy beverage (cold-pressed juice or smoothies)</li>
                             <li class="list-group-item">1.500 calories/day</li>
                         </ul>
+                        <h1><span class="fs-1 heading">Price :</span> Rp600000</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container mt-3">
+            <div class="card">
+                <div class="position-relative">
+                    <img class="card-img-top rounded img-plans" src="img/Menu_Utama/Gado-Gado 3.png" alt="Image">
+                    <div
+                        class="card-body position-absolute top-50 end-0 translate-middle-y text-white plans-block-text-right">
+                        <h1 class="heading">SingSet</h1>
+                        <h5 class="card-text">Who says weight loss should be dull and agonizing?<br> Our singset menu
+                            will indulge your tongue and make the body's goals journey fun.<br> (PS: don’t forget to
+                            exercise regularly and sleep well too)
+                        </h5>
+                        <h5><span class="fs-3 heading">Goal :</span> Immune
+                            booster,
+                            increase energy and stamina</h5>
+                        <h5><span class="fs-3 heading">Menu :</span> Nasi Pecel Kacang Mente with Organic Tempeh Bacem
+                        </h5>
+                        <ul class="list-group my-2">
+                            <li class="list-group-item">6 days package</li>
+                            <li class="list-group-item">2 healthy main course</li>
+                            <li class="list-group-item">1 healthy beverage (cold-pressed juice or smoothies)</li>
+                            <li class="list-group-item">1.200 calories/day</li>
+                        </ul>
+                        <h1><span class="fs-1 heading">Price :</span> Rp600000</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container my-3">
+            <div class="card">
+                <div class="position-relative">
+                    <img class="card-img-top rounded img-plans" src="img/Front_Page/EsKuwutBali.png" alt="Image">
+                    <div
+                        class="card-body position-absolute top-50 start-0 translate-middle-y text-white plans-block-text-left">
+                        <h1 class="heading">Ibu Suri</h1>
+                        <h5 class="card-text">Every mother is a warrior.<br> They deserve nutrient-dense meals to support
+                            their miraculous phase as women: pregnancy and breastfeeding
+                        </h5>
+                        <h5><span class="fs-3 heading">Goal :</span> Nutrition booster, ASI booster, and post-birth care 
+                        </h5>
+                        <h5><span class="fs-3 heading">Menu :</span> Nasi timbel beras merah with Sundanese sayur asem and ungkep chicken
+                        </h5>
+                        <ul class="list-group my-2 ">
+                            <li class="list-group-item">6 days package</li>
+                            <li class="list-group-item">2 healthy main course</li>
+                            <li class="list-group-item">2 healthy beverage (cold-pressed juice or smoothies)</li>
+                            <li class="list-group-item">1.600 - 1.800 calories/day</li>
+                        </ul>
+                        <h1><span class="fs-1 heading">Price :</span> Rp800000</h1>
                     </div>
                 </div>
             </div>
